--- a/Frontend/Course website/src/styles/header.css
+++ b/Frontend/Course website/src/styles/header.css
@@ -7,7 +7,7 @@
     justify-content: space-between;
     padding: 10px;
     box-shadow: 0px 2px 20px rgba(0,0,0,0.1);
-    position: absolute;
+    position: fixed;
     width:100vw;
     top:0px;
     left:0px;
@@ -105,12 +105,20 @@
     color:#C92728;
 }
 
+.headerCateDiv{
+    background-color: var(--white);
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .headerList{
     position:absolute;
     width:200px;
     right:10px;
-    top:70px;
-    background-color: var(--bg-color);
+    top:59px;
+    background-color: var(--primary-color-2);
     display: flex;
     flex-direction: column;
 }
@@ -121,7 +129,7 @@
    display: flex;
    justify-content: center;
    align-items: center;
-   background: var(--white);
+   background:var(--white);
    text-decoration: none;
    color: black;
 }
@@ -129,4 +137,12 @@
 .headerCategoryEach:hover{
     background: var(--primary-color-2);
     color: var(--white);
+}
+
+.showHeaderCateList{
+    display: block;
+}
+
+.hideHeaderCateList{
+    display: none;
 }
